<resources>
    <string name="app_name">EventPlanner</string>

    <string name="facebook_application_id" translatable="false">eventPlanner</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbeventPlanner</string>

    <string name="menu_action_add_offer">Add your offer</string>

    <string name="usernameReg">Username</string>
    <string name="emailReg">Email</string>
    <string name="passwordReg">Password</string>
    <string name="sign_upReg">Sign up</string>
    <string name="sign_inLog">Sign in</string>
    <string name="signin_redirect">Already a member? Sign in!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signup_redirect">Don\'t have an account? Register here!</string>
    <string name="errorEmptyEmail">Email field is empty.</string>
    <string name="errorEmptyPassword">Password field is empty</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="repeat">Repeat</string>
    <string name="ok">Ok</string>

    <string name="navigation_ballrooms">Ballrooms</string>
    <string name="navigation_photographers">Photographers</string>
    <string name="menu_my_services">My offerts</string>
    <string name="menu_new_offer">Add new offer</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_my_messages">My messages</string>
    <string name="navigation_decorations">Decorations</string>

    <string name="navigation_alarms">Reminders</string>

    <string name="delete">Delete</string>
    <string name="empty">No items.</string>

    <string name="delete_prompt">Are you sure you want to delete?</string>
    <string name="confirm">Confirm</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="my_ballrooms">Ballrooms</string>
    <string name="my_photographers">Photographers</string>
    <string name="my_decorations">Decorations</string>
    <string name="divider_bullet">•</string>
    <string name="message_no_reviews">Be the first to leave a review!</string>
    <string name="message_no_data">Nothing to show!</string>

    <string name="string_next">Save</string>
    <string name="hint_offer_name">Name of your brand</string>
    <string name="hint_offer_description">A short description of your offer</string>
    <string name="hint_offer_location">Your brand location</string>
    <string name="view_service_fragment">Details</string>
    <string name="Details">Details</string>

    <string name="cancel">Cancel</string>
    <string name="hint_review">How was your experience?</string>
    <string name="submit">Submit</string>
    <string name="filter_add_review">Add review</string>

    <string name="title_hint">Title</string>
    <string name="reminder_hint">Enter a reminder…</string>


    <string name="fab_add_note">Add Note</string>
    <string name="fab_add_alert">Add Alert</string>

    <string name="action_bar_create_alert">Create Alert</string>
    <string name="action_bar_edit_alert">Edit Alert</string>
    <string name="action_bar_create_note">Create Note</string>
    <string name="action_bar_edit_note">Edit Note</string>
    <string name="header_log_out">Log out</string>


    <string-array name="spinnerServicesArray">
        <item>Ballroom</item>
        <item>Photographer</item>
        <item>Decorations</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit</string>
    <string name="delete_service">Delete</string>
</resources>
