<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_ballrooms">

    <fragment
        android:id="@+id/nav_ballrooms"
        android:name="ro.ase.eventplanner.Fragment.BallroomsFragment"
        android:label="@string/navigation_ballrooms"
        tools:layout="@layout/fragment_ballrooms" >


    </fragment>

    <fragment
        android:id="@+id/nav_photographers"
        android:name="ro.ase.eventplanner.Fragment.PhotographersFragment"
        android:label="@string/navigation_photographers"
        tools:layout="@layout/fragment_photographers" >


    </fragment>


    <fragment
        android:id="@+id/nav_decorations"
        android:name="ro.ase.eventplanner.Fragment.DecorationsFragment"
        android:label="@string/navigation_decorations" >


    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ro.ase.eventplanner.Activity.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow">

    </fragment>

    <fragment
        android:id="@+id/nav_tools"
        android:name="ro.ase.eventplanner.Fragment.MyNotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_tools"/>

    <fragment
        android:id="@+id/nav_share"
        android:name="ro.ase.eventplanner.Activity.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share">

    </fragment>


    <fragment
        android:id="@+id/viewService"
        android:name="ro.ase.eventplanner.Fragment.ViewServiceFragment"
        android:label="@string/Details"
        tools:layout="@layout/try_layout" /><action android:id="@+id/action_global_viewService" app:destination="@id/viewService"/>

    <fragment
        android:id="@+id/noteFragment"
        android:name="ro.ase.eventplanner.Fragment.NoteFragment"
        android:label="Note"
        tools:layout="@layout/activity_create_or_edit_note" />
    <action android:id="@+id/action_global_noteFragment" app:destination="@id/noteFragment" />


</navigation>